# yt-vl-screener

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  __main__.py
app/admin/: __init__.py  auth.py  view.py
app/admin/templates/: index.html  logs.html  metr.html
app/config/: __init__.py  config.py  logger.py
app/database/: __init__.py  database.py
app/database/migrations/: env.py  script.py.mako
app/database/migrations/versions/: a35d17b3d280_initial.py
app/database/models/: __init__.py  base.py  settings.py
app/database/repositories/: __init__.py  abstract.py  settings.py
app/models/: __init__.py  settings.py
app/schemas/: __init__.py  enums.py
app/screener/: __init__.py  consumer.py  producer.py  screener.py
app/utils/: __init__.py  create_text.py  generate_chart.py  telegram_bot.py
