[project]
name = "yt-vl-screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.2",
    "itsdangerous>=2.2.0",
    "psutil>=7.0.0",
    "sqlalchemy>=2.0.41",
    "starlette-admin>=0.14.1",
    "unicex>=0.18.3",
    "uvicorn>=0.34.2",
    "matplotlib>=3.10.1",
    "mplfinance>=0.12.10b0",
    "pandas>=2.2.3",
    "aio-pika>=9.5.8",
    "loguru>=0.7.3",
    "msgpack>=1.1.2",
    "pyzmq>=27.1.0",
    "pyyaml>=6.0.2",
    "pre-commit>=4.5.1",
    "aiogram>=3.25.0",
]
